* Add SourceCodePro font * Add bottom margin to title

--- a/src/global.css
+++ b/src/global.css
@@ -3,6 +3,11 @@
   font-family: 'NineteenNinetySeven';
 }
 
+@font-face {
+  src: url('/fonts/SourceCodePro-Regular.ttf');
+  font-family: 'SourceCodePro';
+}
+
 body {
   margin: 0px;
 }
